fix gap

--- a/material-overrides/assets/stylesheets/home.css
+++ b/material-overrides/assets/stylesheets/home.css
@@ -153,7 +153,7 @@ h3 {
   display: flex;
   align-items: center;
   height: fit-content;
-  gap: 2em;
+  gap: 1em;
   padding: .9em 2.35em;
 }
 
